src/test/ui/consts/const-block-non-item-statement-2.stderr
error[E0658]: statements in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-2.rs:11:20
   |
LL | const A: usize = { 1; 2 };
   |                    ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-2.rs:14:20
   |
LL | const B: usize = { { } 2 };
   |                    ^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-2.rs:18:12
   |
LL |     () => (()) //~ ERROR statements in constants are unstable
   |            ^^
LL | }
LL | const C: usize = { foo!(); 2 };
   |                    ------- in this macro invocation
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: let bindings in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-2.rs:22:28
   |
LL | const D: usize = { let x = 4; 2 };
   |                            ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-2.rs:22:28
   |
LL | const D: usize = { let x = 4; 2 };
   |                            ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: let bindings in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-2.rs:22:1
   |
LL | const D: usize = { let x = 4; 2 };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constants are unstable (see issue #48821)
  --> $DIR/const-block-non-item-statement-2.rs:22:1
   |
LL | const D: usize = { let x = 4; 2 };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
